--- a/2023.html
+++ b/2023.html
@@ -7,12 +7,12 @@
       <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
+   
  <header class="header">
-      <h1>2023年记录的视频和图片.</h1>
+      <h1>2023年的视频和图片.</h1>
     </header>
     <div class="gallery">
-        <img src="image2023/001.jpg">
+        
       <img src="image2023/201.jpg">
       <img src="image2023/202.jpg">
       <img src="image2023/203.jpg">
@@ -45,6 +45,8 @@
   <source src="image2023/218.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
+
+ <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
        </div>
 </body>
 </html>
