--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
  <nav>
         <ul>
-            <li class="color"><a href="ihjoho">2025年</a></li>
-            <li class="color"><a href="sdgfs">2024年</a></li>
+            <li class="color"><a href="2025.html">2025年</a></li>
+            <li class="color"><a href="2024.html">2024年</a></li>
             <li class="color"><a href="2023.html">2023年</a></li>
 
         </ul>
