--- a/2024.html
+++ b/2024.html
@@ -105,6 +105,50 @@
   <source src="movie.ogg" type="video/ogg">
 </video>
 
+
+<video width="320" height="240" controls>
+  <source src="image2024/382.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+
+<video width="320" height="240" controls>
+  <source src="image2024/383.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+
+
+<video width="320" height="240" controls>
+  <source src="image2024/386.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+<video width="320" height="240" controls>
+  <source src="image2024/387.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+
+<video width="320" height="240" controls>
+  <source src="image2024/388.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+
+<video width="320" height="240" controls>
+  <source src="image2024/389.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+<video width="320" height="240" controls>
+  <source src="image2024/391.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+</video>
+
+
+
+
  <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
 
        </div>
