--- a/2024.html
+++ b/2024.html
@@ -10,7 +10,7 @@
 
 
  <header class="header">
-      <h1>2024年的视频和图片.</h1>
+      <h1>2024年家乡的视频和图片.</h1>
     </header>
     <div class="gallery">
         <img src="image2024/301.jpg">
