--- a/2025.html
+++ b/2025.html
@@ -10,7 +10,7 @@
   
 
  <header class="header">
-      <h1>2025年的视频和图片.</h1>
+      <h1>2025年家乡的视频和图片.</h1>
     </header>
     <div class="gallery">
      
@@ -145,7 +145,7 @@
 </video>
 
 
-
+</div>
 
         <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
 </body>
