--- a/2025.html
+++ b/2025.html
@@ -146,7 +146,10 @@
 
 
 </div>
-
-        <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
+<div id="footer">
+ <h1 class="footer" style="padding-right:5px; text-align: left;"><a href="202501.html">下一页</a></h1>
+        <h1 class="footer" style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
+      
+      </div>
 </body>
 </html>
