--- a/2023.html
+++ b/2023.html
@@ -48,7 +48,7 @@
 </div>
 
 
- <h1 style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
+ <h1 style="padding-right:5px; text-align: right;"><a href="index.html">返回首页</a></h1>
        
 </body>
 </html>
