--- a/2025.html
+++ b/2025.html
@@ -148,7 +148,7 @@
 </div>
 <div id="footer">
  <h1 class="footer" style="padding-right:5px; text-align: left;"><a href="202501.html">下一页</a></h1>
-        <h1 class="footer" style="padding-right:5px; text-align: right;"><a href="index.html">反回首页</a></h1>
+        <h1 class="footer" style="padding-right:5px; text-align: right;"><a href="index.html">返回首页</a></h1>
       
       </div>
 </body>
