--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 <div class="gallery">
-        <video width="320" height="240" controls>
+        <video width="320" height="240" loading="lazy" controls>
   <source src="image2023/202.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
@@ -43,7 +43,7 @@
   <source src="image2023/203.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
-              <video width="320" height="240" controls>
+              <video width="320" height="240"  loading="lazy" controls>
   <source src="image2023/205.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
