--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
   <source src="image2023/202.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
-            <video width="320" height="240" loading="lazy" controls>
+            <video width="320" height="240" loading="lazy" alt="视频"controls>
   <source src="image2023/203.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
-              <video width="320" height="240"  loading="lazy" controls>
+              <video width="320" height="240"  loading="lazy" alt="视频" controls>
   <source src="image2023/205.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
-                  <video width="320" height="240" loading="lazy" controls>
+                  <video width="320" height="240" loading="lazy" alt="视频"controls>
   <source src="image2023/206.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
       </video>
-     <video width="320" height="240" loading="lazy" controls>
+     <video width="320" height="240" loading="lazy"alt="视频" controls>
   <source src="image2023/207.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 </video>
