--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <header class="header">
-      <h1>台山，冲娄, 潮安村(马坊).</h1>
+      <h1>台山冲蒌镇莲花潮安村（马方）.</h1>
     </header>
       <img width=100%; height= 250px; src="image/6818.jpg"></img>
 
@@ -25,11 +25,11 @@
         
     </nav> 
 <br>
-       <h1 class="main-picture"><u><em>台山，冲娄, 潮安村(马坊).</em></u></h1>
+       <h1 class="main-picture"><u><em>台山冲蒌镇莲花潮安村（马方）.</em></u></h1>
 
     <br>
     
-    <h2>欢迎大家来观看我们的家乡，这里是我们的家乡位于台山市，冲蒌，潮安村(马坊).</h2>
+    <h2>欢迎大家来观看我们的家乡，这里是我们的家乡位于台山冲蒌镇莲花潮安村（马方）.</h2>
     <p>我们的家乡不仅有美丽的自然风景,还有家乡的山清水秀.</p>
     <br>
 
